--- a/app/src/main/res/layout/sign_up_c.xml
+++ b/app/src/main/res/layout/sign_up_c.xml
@@ -11,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/vdark_bg" />
+    
+    <!--    just a test comment from github -->
 
     <ImageView
         android:id="@+id/imageView"
