test comment from AS (to try simultaneous updates to files)

--- a/app/src/main/res/layout/sign_up_c.xml
+++ b/app/src/main/res/layout/sign_up_c.xml
@@ -238,5 +238,6 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5" />
 
+<!--    just a test comment from AS -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
