--- a/app/src/main/res/layout/sign_up_c.xml
+++ b/app/src/main/res/layout/sign_up_c.xml
@@ -14,6 +14,7 @@
     
     <!--    just a test comment from github -->
     <!--    just a test comment from Madis -->
+    <!-- Help -->
 
     <ImageView
         android:id="@+id/imageView"
