--- a/app/src/main/res/layout/intro.xml
+++ b/app/src/main/res/layout/intro.xml
@@ -5,8 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#202125"
-    android:paddingTop="?attr/actionBarSize">
+    android:background="#202125">
 
     <Button
         android:id="@+id/button3"
@@ -14,54 +13,68 @@
         android:layout_height="66dp"
         android:fontFamily="sans-serif-medium"
         android:text="@string/sign_in"
+        android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="#202125"
+        android:textColor="@color/dark_txt"
+        android:textSize="24sp"
         app:backgroundTint="#FFB700"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="664dp"
+        app:layout_constraintTop_toBottomOf="@+id/lmButton"
+        android:layout_marginTop="10dp"
         tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="1580dp"
-        android:layout_height="2000dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.546"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.461"
-        app:srcCompat="@drawable/fircs"
-        android:contentDescription="@string/todo" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:srcCompat="@drawable/intro_bg" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/lmButton"
         android:layout_width="236dp"
         android:layout_height="66dp"
+        android:layout_marginTop="530dp"
         android:fontFamily="sans-serif-medium"
         android:text="@string/learn_more"
+        android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="#202125"
+        android:textColor="@color/dark_txt"
+        android:textSize="24sp"
         app:backgroundTint="#EAEBEF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="593dp"
+        app:layout_constraintTop_toTopOf="@+id/topText"
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="302dp"
-        android:layout_height="87dp"
+        android:id="@+id/topText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginTop="36dp"
+        android:fontFamily="@font/roboto"
+        android:shadowColor="#FFFFFF"
+        android:shadowDx="2.0"
+        android:shadowDy="2.0"
+        android:shadowRadius="2.0"
         android:text="@string/south_african_startup_hub"
         android:textColor="#303135"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="33dp"
+        app:layout_constraintTop_toTopOf="@+id/imageView3"
         tools:ignore="MissingConstraints" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="51dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/topText"
+        app:srcCompat="@drawable/ideaGenix" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
