colors (for test)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
     <color name="dark_txt">#202125</color>
     <color name="yellow">#FFB700</color>
     <color name="gray">#45474D</color>
+    <color name="yellow2">#FFEB3B</color>
 
 </resources>
