--- a/app/src/main/res/layout/learn_more_c.xml
+++ b/app/src/main/res/layout/learn_more_c.xml
@@ -12,7 +12,8 @@
         android:id="@+id/background_col"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/vdark_bg" />
+        android:background="@color/vdark_bg"
+        />
 
     <View
         android:id="@+id/background"
