--- a/app/src/main/res/layout/sign_up_c.xml
+++ b/app/src/main/res/layout/sign_up_c.xml
@@ -31,6 +31,20 @@
         android:layout_height="65dp"
         android:background="@color/dark_bg" />
 
+    <Button
+        android:id="@+id/button_share"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="18dp"
+        android:text="Sign up"
+        android:textAllCaps="false"
+        android:textColor="@color/dark_txt"
+        android:textSize="24sp"
+        app:background="@color/yellow"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -88,10 +102,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="70dp"
         android:fontFamily="@font/roboto"
-        android:text="E-mail address"
+        android:text="@string/email"
         android:textAlignment="textStart"
         android:textColor="@color/light_txt"
         android:textSize="18sp"
@@ -219,21 +233,7 @@
         app:lineHeight="26sp" />
 
 
-    <Button
-        android:id="@+id/button_share"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="18dp"
-        android:text="Sign up"
-        android:textAllCaps="false"
-        android:textColor="@color/dark_txt"
-        android:textSize="24sp"
-        app:backgroundTint="@color/yellow"
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-
-        app:layout_constraintRight_toRightOf="parent" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
