--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -1,6 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+
+
+    <View
+        android:id="@+id/background_col"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/vdark_bg"
+        />
+
+    <View
+        android:id="@+id/background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/bg_learn_more" />
+    <View
+        android:id="@+id/topbar"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:background="@color/dark_bg"
+        tools:ignore="MissingConstraints" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:srcCompat="@drawable/scr_learn_more"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="16dp"
+        tools:ignore="MissingConstraints"
+        android:contentDescription="TODO" />
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="@color/light_txt"
+        android:textSize="24sp"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="South African Startup Hub"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"/>
+
+    <Button
+        android:id="@+id/Back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:fontFamily="@font/roboto"
+        android:text="X"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="#EAEBEF"
+        android:textSize="24sp"
+        app:backgroundTint="#303135"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/count1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="30dp"
+        android:layout_weight="1"
+        android:fontFamily="@font/roboto"
+        android:text="100+\n300+\n30+"
+        android:textAlignment="textEnd"
+        android:textColor="@color/light_txt"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="@+id/background"
+        app:layout_constraintTop_toBottomOf="@+id/topbar"
+        app:lineHeight="40dp" />
+    <TextView
+        android:id="@+id/count2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_weight="1"
+        android:fontFamily="@font/roboto"
+        android:text="Startups\nEvaluations\nInvestments"
+        android:textAlignment="textStart"
+        android:textColor="@color/light_txt"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="@+id/count1"
+        app:layout_constraintStart_toEndOf="@+id/count1"
+        app:lineHeight="40dp" />
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="411dp"
+        android:layout_height="280dp"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/roboto"
+        android:text="This Hub works as a bridge between the South African Start-ups and European investors, with help of multinational and independent experts.\n\n
+Whether you are an investor, a startup, or an expert in your field,
+We aim to make Your journey secure, simple and successful."
+        android:textAlignment="center"
+        android:textColor="@color/light_txt"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="@+id/background_col"
+        app:layout_constraintStart_toStartOf="@+id/background_col"
+        app:layout_constraintTop_toBottomOf="@+id/count2"
+        app:lineHeight="32sp" />
+
+    <TextView
+        android:layout_width="408dp"
+        android:layout_height="129dp"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/roboto"
+        android:text="* The Intellectual Property is protected with customized NDA agreements.\n
+** No investment without 100% evaluation and satisfaction.
+"
+        android:textAlignment="textStart"
+        android:textColor="@color/light_txt"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/description"
+        app:lineHeight="26sp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
