Get Started, activity menu, options, app bar

--- a/app/src/main/res/layout/intro.xml
+++ b/app/src/main/res/layout/intro.xml
@@ -5,7 +5,8 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#202125">
+    android:background="#202125"
+    tools:context=".MainActivity">
 
     <Button
         android:id="@+id/button3"
