--- a/app/src/main/res/layout/get_started.xml
+++ b/app/src/main/res/layout/get_started.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     android:background="#303135"
     android:paddingTop="@dimen/material_emphasis_medium"
-    tools:ignore="ExtraText">>
+    tools:ignore="ExtraText"
+    tools:context=".MainActivity">>>
 
     <ImageView
         android:id="@+id/imageView4"
