--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- base set of styles that apply to all versions -->
-    <style name="BaseAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="BaseAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/dark_txt</item>
         <item name="colorPrimaryDark">@color/dark_txt</item>
         <item name="colorAccent">@color/light_txt</item>
     </style>
+    <!-- Theme.AppCompat.Light.DarkActionBar -->
 
     <!-- declare the theme name that's actually applied in the manifest file -->
     <style name="AppTheme" parent="BaseAppTheme" />
