--- a/app/src/main/res/layout/intro.xml
+++ b/app/src/main/res/layout/intro.xml
@@ -8,7 +8,7 @@
     android:background="#202125">
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/intro_sign_in"
         android:layout_width="236dp"
         android:layout_height="66dp"
         android:fontFamily="sans-serif-medium"
@@ -21,8 +21,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lmButton"
-        android:layout_marginTop="10dp"
-        tools:ignore="MissingConstraints" />
+        android:layout_marginTop="10dp" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -75,6 +74,6 @@
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
         app:layout_constraintTop_toBottomOf="@+id/topText"
-        app:srcCompat="@drawable/ideaGenix" />
+        app:srcCompat="@drawable/ideagenix" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
