--- a/app/src/main/res/layout/activity_retrieve_data.xml
+++ b/app/src/main/res/layout/activity_retrieve_data.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RetrieveDataActivity">
+    tools:context=".MainActivity">
 
     <TextView
         android:layout_width="match_parent"
@@ -15,7 +15,7 @@
     <ListView
         android:id="@+id/myListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="500dp"
         android:padding="10dp"/>
 
-</LinearLayout>
+</RelativeLayout>
