--- a/app/src/main/res/layout/home_dash_draft.xml
+++ b/app/src/main/res/layout/home_dash_draft.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="700dp"
     >
 
     <ListView
+        android:layout_marginTop="100dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="600dp"
         android:id="@+id/listView1">
 
     </ListView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
