--- a/app/src/main/res/layout/_intro_c.xml
+++ b/app/src/main/res/layout/_intro_c.xml
@@ -77,6 +77,23 @@
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
         app:layout_constraintTop_toBottomOf="@+id/topText"
-        app:srcCompat="@drawable/ideagenix" />
+        app:srcCompat="@drawable/ideagen" />
+
+    <Button
+        android:id="@+id/insert"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Insert"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <Button
+        android:id="@+id/list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="List"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="90dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
