--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,6 +75,6 @@
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
         app:layout_constraintTop_toBottomOf="@+id/topText"
-        app:srcCompat="@drawable/ideagenix" />
+        app:srcCompat="@drawable/ideagen" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
