--- a/app/src/main/res/layout/_intro_c.xml
+++ b/app/src/main/res/layout/_intro_c.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
@@ -12,6 +13,8 @@
         android:id="@+id/imageView3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/intro_bg" />
 
     <Button
@@ -30,13 +33,11 @@
         app:layout_constraintTop_toBottomOf="@+id/lmButton"
         android:layout_marginTop="10dp" />
 
-
-
     <Button
         android:id="@+id/lmButton"
         android:layout_width="236dp"
         android:layout_height="66dp"
-        android:layout_marginTop="530dp"
+        android:layout_marginTop="250dp"
         android:fontFamily="sans-serif-medium"
         android:text="@string/learn_more"
         android:textAllCaps="false"
@@ -63,7 +64,7 @@
         android:shadowRadius="2.0"
         android:text="@string/south_african_startup_hub"
         android:textColor="#303135"
-        android:textSize="36sp"
+        android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView3"
@@ -95,5 +96,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginLeft="90dp"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
