--- a/app/src/main/res/layout/_sign_in_c.xml
+++ b/app/src/main/res/layout/_sign_in_c.xml
@@ -36,7 +36,7 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/button_share"
+        android:id="@+id/btnSignin"
         android:layout_width="200dp"
         android:layout_height="60dp"
         android:layout_marginBottom="18dp"
@@ -83,7 +83,7 @@
         android:id="@+id/count1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:layout_weight="1"
         android:fontFamily="@font/roboto"
         android:text="Sign in as Investor,\n and start the journey!"
@@ -232,7 +232,7 @@
         android:textAlignment="center"
         android:textColor="@color/light_txt"
         android:textSize="22sp"
-        app:layout_constraintBottom_toTopOf="@id/button_share"
+        app:layout_constraintBottom_toTopOf="@id/btnSignin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:lineHeight="26sp" />
