--- a/app/src/main/res/layout/_home_dash_c.xml
+++ b/app/src/main/res/layout/_home_dash_c.xml
@@ -6,11 +6,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
+    <!--<Button
+        android:id="@+id/showMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Menu"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="showMenu" />-->
+
     <View
         android:id="@+id/background_col"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/light_txt" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,9 +35,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <include
+    <!--<include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar"/>
+        layout="@layout/toolbar"/>-->
 
 
 
