--- a/app/src/main/res/layout/_intro_c.xml
+++ b/app/src/main/res/layout/_intro_c.xml
@@ -51,6 +51,15 @@
         app:layout_constraintTop_toTopOf="@+id/topText"
         tools:ignore="MissingConstraints" />
 
+    <Button
+        android:id="@+id/showMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Menu"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="showMenu" />
+
     <TextView
         android:id="@+id/topText"
         android:layout_width="wrap_content"
