--- a/app/src/main/res/layout/_learn_more_c.xml
+++ b/app/src/main/res/layout/_learn_more_c.xml
@@ -106,7 +106,7 @@
         android:text="100+\n300+\n30+"
         android:textAlignment="textEnd"
         android:textColor="@color/light_txt"
-        android:textSize="30sp"
+        android:textSize="20sp"
         app:lineHeight="40dp"
         app:layout_constraintStart_toStartOf="@+id/background"
         app:layout_constraintTop_toBottomOf="@+id/topbar"
@@ -124,7 +124,7 @@
         android:text="Startups\nEvaluations\nInvestments"
         android:textAlignment="textStart"
         android:textColor="@color/light_txt"
-        android:textSize="30sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/count1"
         app:layout_constraintStart_toEndOf="@+id/count1"
         app:lineHeight="40dp" />
@@ -171,24 +171,28 @@
 
     <TextView
         android:id="@+id/description"
-        android:layout_width="411dp"
-        android:layout_height="280dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:fontFamily="@font/roboto"
         android:text="This Hub works as a bridge between the South African Start-ups and European investors, with help of multinational and independent experts.\n\n
 Whether you are an investor, a startup, or an expert in your field,
 We aim to make Your journey secure, simple and successful."
         android:textAlignment="center"
         android:textColor="@color/light_txt"
-        android:textSize="22sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/background_col"
         app:layout_constraintStart_toStartOf="@+id/background_col"
         app:layout_constraintTop_toBottomOf="@+id/count2"
         app:lineHeight="32sp" />
 
     <TextView
-        android:layout_width="408dp"
-        android:layout_height="129dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/roboto"
         android:text="* The Intellectual Property is protected with customized NDA agreements.\n
@@ -196,14 +200,14 @@ We aim to make Your journey secure, simple and successful."
 "
         android:textAlignment="textStart"
         android:textColor="@color/light_txt"
-        android:textSize="16sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/description"
         app:lineHeight="26sp" />
 
     <Button
-        android:id="@+id/button_save"
+        android:id="@+id/btn_signIn_lm"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:text="Sign in"
@@ -216,11 +220,11 @@ We aim to make Your journey secure, simple and successful."
         android:layout_marginEnd="14dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/button_share"
+        app:layout_constraintRight_toLeftOf="@+id/btn_getStarted_lm"
         app:layout_constraintHorizontal_chainStyle="spread" />
 
     <Button
-        android:id="@+id/button_share"
+        android:id="@+id/btn_getStarted_lm"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:text="Get started"
@@ -231,7 +235,7 @@ We aim to make Your journey secure, simple and successful."
         android:layout_marginStart="4dp"
         android:layout_marginEnd="18dp"
         android:layout_marginBottom="18dp"
-        app:layout_constraintLeft_toRightOf="@+id/button_save"
+        app:layout_constraintLeft_toRightOf="@+id/btn_signIn_lm"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
