--- a/app/src/main/res/layout/_intro_c.xml
+++ b/app/src/main/res/layout/_intro_c.xml
@@ -18,23 +18,7 @@
         app:srcCompat="@drawable/intro_bg" />
 
     <Button
-        android:id="@+id/intro_sign_in"
-        android:layout_width="236dp"
-        android:layout_height="66dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="@string/sign_in"
-        android:textAllCaps="false"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@color/dark_txt"
-        android:textSize="24sp"
-        app:backgroundTint="#FFB700"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lmButton"
-        android:layout_marginTop="10dp" />
-
-    <Button
-        android:id="@+id/lmButton"
+        android:id="@+id/btnLearnMore"
         android:layout_width="236dp"
         android:layout_height="66dp"
         android:layout_marginTop="400dp"
@@ -52,13 +36,31 @@
         tools:ignore="MissingConstraints" />
 
     <Button
+        android:id="@+id/btnSignIn"
+        android:layout_width="236dp"
+        android:layout_height="66dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/sign_in"
+        android:textAllCaps="false"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/dark_txt"
+        android:textSize="24sp"
+        app:backgroundTint="#FFB700"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnLearnMore"
+        android:layout_marginTop="10dp" />
+
+
+
+    <!--<Button
         android:id="@+id/showMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Menu"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:onClick="showMenu" />
+        android:onClick="showMenu" />-->
 
     <TextView
         android:id="@+id/topText"
@@ -89,7 +91,7 @@
         app:layout_constraintTop_toBottomOf="@+id/topText"
         app:srcCompat="@drawable/ideagen" />
 
-    <Button
+    <!--<Button
         android:id="@+id/insert"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -104,7 +106,7 @@
         android:text="List"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginLeft="90dp"/>
+        android:layout_marginLeft="90dp"/>-->
 
 
 
