--- a/app/src/main/res/layout/_sign_in_c.xml
+++ b/app/src/main/res/layout/_sign_in_c.xml
@@ -69,7 +69,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:fontFamily="@font/roboto"
-        android:text="TextView"
+        android:text="South African Startup Hub"
         android:textAlignment="center"
         android:textColor="@color/light_txt"
         android:textSize="24sp"
@@ -77,7 +77,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="South African Startup Hub" />
+        />
 
     <TextView
         android:id="@+id/count1"
@@ -107,7 +107,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="50dp"
         android:fontFamily="@font/roboto"
         android:text="@string/email"
         android:textAlignment="textStart"
@@ -118,9 +118,11 @@
 
     <EditText
         android:id="@+id/insertEmail"
-        android:layout_width="354dp"
+        android:layout_width="match_parent"
         android:layout_height="52dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginLeft="80dp"
+        android:layout_marginRight="40dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:shadowColor="@color/light_txt"
@@ -152,11 +154,14 @@
 
     <EditText
         android:id="@+id/insertPassword"
-        android:layout_width="254dp"
+        android:layout_width="match_parent"
         android:layout_height="52dp"
+        android:layout_marginLeft="80dp"
         android:layout_marginTop="50dp"
+        android:layout_marginRight="40dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:password="true"
         android:shadowColor="@color/light_txt"
         android:textColor="@color/light_txt"
         app:layout_constraintLeft_toLeftOf="parent"
