--- a/app/src/main/res/layout/appbar.xml
+++ b/app/src/main/res/layout/appbar.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="#303135"
-    android:id="@+id/mainToolbar"
-    android:theme="@style/AppTheme">
+    android:id="@+id/mainToolbar">
 
 </androidx.appcompat.widget.Toolbar>
 
