--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -1,15 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
 
     <View
         android:id="@+id/background_col"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/vdark_bg" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.307"
+        app:srcCompat="@drawable/profile" />
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/profilbuttons"
+        tools:layout_editor_absoluteY="594dp"
+        app:layout_constraintTop_toBottomOf="profiletextView4"
+        />
+
+    <Button
+        android:id="@+id/profilebutton"
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="Edit profile"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="#202125"
+        app:backgroundTint="#FFB700"
+        app:iconTint="#303135"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toBottomOf="profiletextView4"
+        tools:layout_editor_absoluteY="583dp" />
+
+    <TextView
+        android:id="@+id/profiletextView1"
+        android:layout_width="385dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="340dp"
+        android:gravity="start"
+        android:text="Name"
+        android:textColor="#EAEBEF"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:drawableTint="#303135"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+         />
+
+    <TextView
+        android:id="@+id/profiletextView2"
+        android:layout_width="384dp"
+        android:layout_height="83dp"
+        android:layout_marginStart="8dp"
+        android:gravity="start"
+        android:text="Lorem ipsum"
+        android:textColor="#EAEBEF"
+        android:textSize="14sp"
+        app:drawableTint="#303135"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="357dp"
+        app:layout_constraintTop_toBottomOf="@id/profiletextView1"
+         />
+
+    <TextView
+        android:id="@+id/profiletextView3"
+        android:layout_width="385dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="4dp"
+        android:gravity="start"
+        android:text="About me"
+        android:textColor="#EAEBEF"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:drawableTint="#303135"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="447dp"
+        app:layout_constraintTop_toBottomOf="@id/profiletextView2"
+         />
+
+    <TextView
+        android:id="@+id/profiletextView4"
+        android:layout_width="384dp"
+        android:layout_height="83dp"
+        android:layout_marginStart="8dp"
+        android:gravity="start"
+        android:text="Lorem ipsum"
+        android:textColor="#EAEBEF"
+        android:textSize="14sp"
+        app:drawableTint="#303135"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="469dp"
+        app:layout_constraintTop_toBottomOf="profiletextView3" />
+
 
 
 
